tests/paczka1/fuzzy1/35279090.err
Error in line 21: gIb8 A690 78,8
Error in line 16: 4PJrMeMoD S848 2,2
Error in line 37: NpsXZ A160 49,7
